@startuml

interface Carta{
  + {abstract} jugarCarta(jugador, oponente: Jugador, pos: Posicion)
  + {abstract} getNombre(): String

}

Carta <|.. Clima
Carta <|.. ClimaSoleado

class Clima{
  - nombre: String
  - posAfectadas: List<Posicion>

  + Clima(nombre: String, List<Posicion> posicionesAfectadas)
  + jugarCarta(jugador, oponente: Jugador, pos: Posicion)
  + getNombre(): String
}

class ClimaSoleado{
  - nombre: String
  - posAfectadas: List<Posicion>

  + Clima(nombre: String, List<Posicion> posicionesAfectadas)
  + jugarCarta(jugador, oponente: Jugador, pos: Posicion)
  + getNombre(): String
}

@enduml